--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
+  vector_math: ^2.1.2
+  envify: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +78,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: fonts/Open-Sans/OpenSans-Regular.ttf
+        - asset: fonts/Open-Sans/OpenSans-Light.ttf
+          weight: 300
+        - asset: fonts/Open-Sans/OpenSans-Bold.ttf
+          weight: 700
+        - asset: fonts/Open-Sans/OpenSans-Semibold.ttf
+          weight: 600
+        - asset: fonts/Open-Sans/OpenSans-ExtraBold.ttf
+          weight: 800
+    - family: DMSerifDisplay
+      fonts:
+        - asset: fonts/DM-Serif-Display/DMSerifDisplay-Regular.ttf
+        - asset: fonts/DM-Serif-Display/DMSerifDisplay-Italic.ttf
+          style: italic
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
