--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.0.3
   audioplayers: ^1.1.0
   intl: ^0.17.0
+  carousel_slider: ^4.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
