--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   carousel_slider: ^4.1.1
   equatable: ^2.0.5
+  glassmorphism: ^3.0.0
 
 dev_dependencies:
   flutter_test:
