--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   equatable: ^2.0.5
   glassmorphism: ^3.0.0
   flutter_svg: ^1.1.6
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
